# rdf-proofs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
circom/bls12381/: less_than_eq_prv_prv_64.r1cs  less_than_eq_prv_prv_64.wasm  less_than_eq_prv_pub_64.r1cs  less_than_eq_prv_pub_64.wasm  less_than_eq_pub_prv_64.r1cs  less_than_prv_prv_64.r1cs  less_than_prv_pub_64.r1cs  less_than_prv_pub_64.wasm  less_than_pub_prv_64.r1cs  less_than_pub_prv_64.wasm  less_than_public_32.r1cs  less_than_public_32.wasm  less_than_public_64.wasm
src/: blind_signature.rs  common.rs  constants.rs  context.rs  derive_proof.rs  elgamal.rs  elliptic_elgamal.rs  error.rs  issuer.rs  key_gen.rs  key_graph.rs  keygen.rs  lib.rs  loader.rs  ordered_triple.rs  predicate.rs  proof.rs  prover.rs  signature.rs  vc.rs  verify_proof.rs
