[package]
name = "rdf-proofs"
version = "0.10.0-alpha.0"
edition = "2021"
authors = ["yamdan"]
license = "MIT"
repository = "https://github.com/zkp-ld/rdf-proofs"
description = "BBS+ signatures and zero-knowledge proofs for Linked Data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
rdf-star = ["oxrdf/rdf-star", "oxttl/rdf-star"]
std = ["proof_system/std"]
parallel = ["proof_system/parallel"]
wasmer-js = ["proof_system/wasmer-js"]
wasmer-sys = ["proof_system/wasmer-sys"]

[dependencies]
chrono = "0.4"
regex = "1.10"
multibase = "0.9"
unsigned-varint = "0.8"

serde = "1.0"
serde_cbor = "0.11"
serde_with = "3.9"

oxrdf = "0.2.0-alpha.6"
oxttl = "0.1.0-alpha.7"
oxsdatatypes = "0.2.0-alpha.2"
oxiri = "0.2.4"

rdf-canon = "0.15.0-alpha.6"

proof_system = { version = "0.31", default-features = false }
bbs_plus = { version = "0.22", default-features = false }
dock_crypto_utils = { version = "0.20", default-features = false }
legogroth16 = { version = "0.15", default-features = false, features = [
    "circom",
] }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = [
    "derive",
] }
ark-bls12-381 = { version = "0.4", default-features = false, features = [
    "curve",
] }
blake2 = { version = "0.10", default-features = false }
sha2 = "0.10"
